--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">Book rental</string>
-    <string name="addBook">Add book</string>
-    <string name="requestBook">Request book</string>
+    <string name="addBook">Add</string>
+    <string name="requestBook">Request new</string>
     <string name="checkRequestBook">Check requests</string>
-    <string name="removeBook">Remove book</string>
-    <string name="borrowBook">Borrow book</string>
-    <string name="returnBook">Return book</string>
-    <string name="confirmBorrowing">Confirm book borrowing</string>
+    <string name="removeBook">Remove</string>
+    <string name="borrowBook">Borrow</string>
+    <string name="borrowedBooks">Borrowed</string>
+    <string name="returnBook">Return</string>
+    <string name="confirmBorrowing">Confirm borrowing</string>
     <string name="returnBookShort">Return</string>
     <string name="about">About</string>
     <string name="action_sign_in_short">Register</string>
