--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,17 @@
 ﻿TODO:
 /* SAFARI BOOKS GIVES US ALL BOOKS WHICH CAN BE AVAILABLE IN LIBRARY. LIBRARY HAVE LIST OF AVAILABLE BOOKS (ONE OF SAFARI BOOK API WITH UNIQUE ID)
--fetching list all books from SafariBook API
--add button to fetch list all books from SafariBook API
--handling with destroyed books
--how many copy of given book is in the library (add,remove)
+-add button to fetch list all books from SafariBook API (new entry on database something like BOOKS API - it will be used on add book functionality where
+we replace current functionality with select input which show us all books from BOOKS API in database
+-to pay for overdue - every borrow book action should put date with deadline for return book. Only admin can click that user return book. When admin
+click it, ten should logic calculate if was there overdue, and if yes should add overdue on user account which can be removed only by admin.
+
+
+THREE FUNCTIONALITIES BELOW WE DONT HAVE TO DO I THINK // Marcin.
+-discuss payments in app // it is for 5 I think
+-how many copy of given book is in the library (add,remove) // dont necessary I think.
 -unique qr code per student // maybe it would be not necessary
--to pay for overdue
--discuss payments in app
 
 //Admin (book.rental.p.lodz.pl / admin12345678)
--How many copy of given book is in the library (add,remove)
 DONE:
 -Initially project configuration
 -Initial Firebase configuration
@@ -22,6 +24,7 @@ DONE:
 -access to book library (checking which books are available, which aren't available)
 -giving id for every book, every book has own qrcode
 -reserve book (24h) / cancel reservation
+-handling with destroyed books (its the same what remove books)
 
 
 /*
