Added checking book state by scan qrcode functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="ConfirmBorrowBookSubmit">Confirm</string>
     <string name="ReserveBookSubmit">Reserve</string>
     <string name="ReserveBookCancel">Cancel</string>
+    <string name="checkStateBook">Check state book</string>
 </resources>
